--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.6",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
