--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.6",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
     "react": "17.0.1",
@@ -27,7 +28,8 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
